correct spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1255,6 +1255,7 @@ https://medium.com/@tylerduprey_52451/a-perfect-video-container-with-css-37fd454
         display: flex;
         right: 0;
         top: 0;
+        padding-top: 120px;
         flex-direction: column-reverse;
         background-color: #0000007d;
         width: 100%;
